--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -14,7 +14,7 @@ jobs:
           toolchain: stable
       - run: cargo test -- --include-ignored
       - run: cargo test --examples
-      - run: cargo doc --no-deps
+      - run: RUSTDOCFLAGS="-D warnings" cargo doc --no-deps
       - run: bin/clippy-pedantic.sh
       - run: cargo bench --no-run --profile dev
       - run: cargo clean
