--- a/flanker-temp/Cargo.toml
+++ b/flanker-temp/Cargo.toml
@@ -10,5 +10,6 @@ repository = "https://github.com/obsidiandynamics/flanker/flanker-temp"
 keywords = ["temp", "io", "file"]
 
 [dependencies]
+thread-id = "4.0.0"
 tinyrand = "0.5.0"
 tinyrand-std = "0.5.0"
